--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <button id="start">Start Game</button>
+
     <script src="index.js"></script>
   </body>
 </html>
