Added divs for score keeping

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Janken</title>
   </head>
   <body>
+    <div id="winner"></div>
+    <div>Player:</div>
+    <output id="player-score">0</output>
+    <div>Computer:</div>
+    <output id="computer-score">0</output><br />
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
